--- a/src/Acted/LegalDocsBundle/Resources/config/routing/user.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/user.yml
@@ -1,4 +1,4 @@
 user_edit:
-    path:     /edit
+    path:     /edit/{slug}
     defaults: { _controller: ActedLegalDocsBundle:User:edit }
     methods:  [PATCH]
