--- a/src/Acted/LegalDocsBundle/Resources/config/routing/admin.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/admin.yml
@@ -1,3 +1,8 @@
+admin_dashboard_homepage:
+    path:     /
+    defaults: { _controller: ActedLegalDocsBundle:Admin:index }
+    methods:  GET
+
 admin_dashboard_recommend:
     path:     /recommend/{page}
     defaults: { _controller: ActedLegalDocsBundle:Admin:recommend, page: 1 }
