--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -15,7 +15,7 @@ Acted\LegalDocsBundle\Entity\User:
           type: string(128)
         email:
           type: string(100)
-          notnull: true
+          nullable: true
           unique: true
         passwordHash:
           type: string(256)
