add new parameter, update user model

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -48,3 +48,4 @@ parameters:
 
     fake_users: show  # show | hide
     confirmation_period: 86400 #24 hours
+    confirmation_period_resend: 86400 #24 hours
