change fake or not fake

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/admin.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/admin.yml
@@ -48,6 +48,11 @@ admin_change_status_user:
     defaults: { _controller: ActedLegalDocsBundle:Admin:changeStatus, _format: json }
     methods:  POST
 
+admin_change_status_fake_user:
+    path:     /users/change_status_fake/{user}
+    defaults: { _controller: ActedLegalDocsBundle:Admin:changeStatusFake, _format: json }
+    methods:  POST
+
 admin_change_email_user:
     path:     /users/change_email/{user}
     defaults: { _controller: ActedLegalDocsBundle:Admin:changeEmail, _format: json }
