profile settings - add form(validation algoritm iban, swift code and etc.), apies for getting profile and saving profile sttings / update user manages / add configs for db

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -30,6 +30,10 @@ services:
           - "@templating.engine.twig"
           - "@router"
           - "%mailer_from_address%"
+          - "@liip_imagine.controller"
+          - "%avatar_dir%"
+          - %kernel.root_dir%
+
 
     app.event.manager:
         class: Acted\LegalDocsBundle\Model\EventsManager
