--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,6 +23,7 @@ parameters:
     per_page: 3
     resetting.token_ttl: 86400
     image_upload_dir: images
+    avatar_dir: images/avatars
     performancecontract_dir: docs/performance_contract
     invoice_dir: docs/invoice
     quotation_dir: docs/quotation
