--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -36,6 +36,10 @@ Acted\LegalDocsBundle\Entity\Artist:
         spotlight:
           type: integer
           nullable: true
+        workAbroad:
+            type: boolean
+            options:
+              default: false
     manyToOne:
         city:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCity
