--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/User.orm.yml
@@ -2,6 +2,10 @@ Acted\LegalDocsBundle\Entity\User:
     type: entity
     table: User
     repositoryClass: Acted\LegalDocsBundle\Repository\UserRepository
+    indexes:
+        search_index:
+            columns: [firstname, lastname]
+            flags: [fulltext]
     id:
         id:
             type: integer
