--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCurrency.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCurrency.orm.yml
@@ -16,4 +16,8 @@ Acted\LegalDocsBundle\Entity\RefCurrency:
         symbol:
           type: string(8)
           notnull: true
+    oneToMany:
+      refCountry:
+        targetEntity: Acted\LegalDocsBundle\Entity\RefCountry
+        mappedBy: refCurrencies
     lifecycleCallbacks: {  }
