--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
@@ -22,6 +22,13 @@ Acted\LegalDocsBundle\Entity\Performance:
           type: string(128)
           options:
             default: 'draft'
+        isVisible:
+          type: boolean
+          options:
+            default: true
+        deletedTime:
+          type: datetime
+          nullable: true
     manyToOne:
         profile:
           targetEntity: Acted\LegalDocsBundle\Entity\Profile
@@ -33,4 +40,8 @@ Acted\LegalDocsBundle\Entity\Performance:
         offers:
           targetEntity: Acted\LegalDocsBundle\Entity\Offer
           mappedBy: performances
+    OneToMany:
+        price:
+          targetEntity: Acted\LegalDocsBundle\Entity\Price
+          inversedBy: performances
     lifecycleCallbacks: {  }
