--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCountry.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCountry.orm.yml
@@ -17,4 +17,10 @@ Acted\LegalDocsBundle\Entity\RefCountry:
         regions:
           targetEntity: Acted\LegalDocsBundle\Entity\RefRegion
           mappedBy: country
+    manyToOne:
+        refCurrencies:
+          targetEntity: Acted\LegalDocsBundle\Entity\RefCurrency
+          inversedBy: refCountry
+          joinColumn:
+            onDelete: "SET NULL"
     lifecycleCallbacks: {  }
