add serialize configs and change existing / change apies for getting and editing user profile settings / change entities

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCountry.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RefCountry.orm.yml
@@ -18,7 +18,7 @@ Acted\LegalDocsBundle\Entity\RefCountry:
           targetEntity: Acted\LegalDocsBundle\Entity\RefRegion
           mappedBy: country
     manyToOne:
-        refCurrencies:
+        refCurrency:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCurrency
           inversedBy: refCountry
           joinColumn:
