add upload search image to profile settings / change rules for city and country in form validation / add migration for image search

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -24,6 +24,7 @@ parameters:
     resetting.token_ttl: 86400
     image_upload_dir: images
     avatar_dir: images/avatars
+    search_image_dir: images/search_images
     performancecontract_dir: docs/performance_contract
     invoice_dir: docs/invoice
     quotation_dir: docs/quotation
