--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -37,9 +37,12 @@ Acted\LegalDocsBundle\Entity\Artist:
           type: integer
           nullable: true
         workAbroad:
-            type: boolean
-            options:
-              default: false
+          type: boolean
+          options:
+            default: false
+        searchImage:
+          type: string(256)
+          nullable: true
     manyToOne:
         city:
           targetEntity: Acted\LegalDocsBundle\Entity\RefCity
