--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
@@ -16,6 +16,8 @@ Acted\LegalDocsBundle\Entity\Artist:
       groups: [spotlight_artist]
     workAbroad:
       groups: [profile_settings]
+    searchImage:
+      groups: [profile_settings]
   virtual_properties:
     getCityProfileId:
       serialized_name: city_id
