--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "gulp-cssimport": "^3.0.1",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
+    "gulp-minify-css": "^1.2.4",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.1",
     "gulp-uglifycss": "^1.0.4"
   },
   "devDependencies": {
+    "gulp": "~3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
     "gulp-cssimport": "^3.0.1",
     "gulp-if": "^1.2.5",
+    "gulp-install": "~0.6.0",
     "gulp-load-plugins": "^1.2.0",
     "gulp-order": "^1.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3",
     "gulp-uglifycss": "^1.0.6",
-    "gulp-install": "~0.6.0",
-    "gulp": "~3.9.1"
+    "gulp-watch": "^4.3.9"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
