--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "blog",
   "main": "gulpfile.js",
   "dependencies": {
+    "es6-promise": "^3.3.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-concat": "^2.6.0",
