--- a/src/Acted/LegalDocsBundle/Resources/config/routing/price.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/price.yml
@@ -1,7 +1,49 @@
 price_service_create:
     path: /service/create
-    defaults: { _controller: ActedLegalDocsBundle:Service:create }
+    defaults: { _controller: ActedLegalDocsBundle:Service:createPriceService }
     methods:  POST
+
+price_service_edit:
+    path: /service/{id}/edit
+    defaults: { _controller: ActedLegalDocsBundle:Service:edit }
+    methods:  PATCH
+
+price_service_remove:
+    path: /service/{id}/remove
+    defaults: { _controller: ActedLegalDocsBundle:Service:removePriceService }
+    methods:  PATCH
+
+price_service_create:
+    path: /service/package/create
+    defaults: { _controller: ActedLegalDocsBundle:Service:createPackage }
+    methods:  POST
+
+price_service_package_create:
+    path: /service/package/create
+    defaults: { _controller: ActedLegalDocsBundle:Service:createPriceServicePackage }
+    methods:  POST
+
+price_service_list:
+    path: /service/list/{id}
+    defaults: { _controller: ActedLegalDocsBundle:Service:get }
+    methods:  GET
+
+price_service_profile_list:
+    path: /service/{id}/list
+    defaults: { _controller: ActedLegalDocsBundle:Service:getList }
+    methods:  GET
+
+price_service_rate_edit:
+    path: /service/rate/{id}/edit
+    defaults: { _controller: ActedLegalDocsBundle:Performance:editPricePerformancePackage }
+    methods:  PATCH
+
+price_service_rate_create:
+    path: /service/rate/create
+    defaults: { _controller: ActedLegalDocsBundle:Service:createPriceServiceRate }
+    methods:  POST
+
+
 
 price_performance_create:
     path: /performance/create
@@ -16,7 +58,7 @@ price_performance_edit:
 price_performance_remove:
     path: /performance/{id}/remove
     defaults: { _controller: ActedLegalDocsBundle:Performance:removePricePerformance }
-    methods:  DELETE
+    methods:  PATCH
 
 price_performance_list:
     path: /performance/list/{id}
@@ -28,32 +70,30 @@ price_performance_profile_list:
     defaults: { _controller: ActedLegalDocsBundle:Performance:getList }
     methods:  GET
 
-
 price_performance_package_create:
     path: /performance/package/create
     defaults: { _controller: ActedLegalDocsBundle:Performance:createPricePerformancePackage }
     methods:  POST
 
-price_performance_package_remove:
-    path: /performance/package/{id}/remove
-    defaults: { _controller: ActedLegalDocsBundle:Performance:removePricePerformancePackage }
-    methods:  DELETE
+price_performance_rate_create:
+    path: /performance/rate/create
+    defaults: { _controller: ActedLegalDocsBundle:Performance:createPricePerformanceRate }
+    methods:  POST
 
-price_performance_package_edit:
-    path: /performance/package/{id}/edit
-    defaults: { _controller: ActedLegalDocsBundle:Performance:editPricePerformancePackage }
+
+
+price_package_edit:
+    path: /package/{id}/edit
+    defaults: { _controller: ActedLegalDocsBundle:PricePackage:edit }
+    methods:  PATCH
+
+price_package_remove:
+    path: /package/{id}/remove
+    defaults: { _controller: ActedLegalDocsBundle:PricePackage:remove }
     methods:  PATCH
 
 
-price_service_package_create:
-    path: /service/package/create
-    defaults: { _controller: ActedLegalDocsBundle:Service:createPriceServicePackage }
-    methods:  POST
 
-price_service_package_remove:
-    path: /service/package/{id}/remove
-    defaults: { _controller: ActedLegalDocsBundle:Service:removePriceServicePackage }
-    methods:  DELETE
 
 price_option_create:
     path: /option/create
@@ -68,13 +108,8 @@ price_option_edit:
 price_option_remove:
     path: /option/{id}/remove
     defaults: { _controller: ActedLegalDocsBundle:PriceOption:remove }
-    methods:  DELETE
+    methods:  PATCH
 
-
-price_rate_create:
-    path: /rate/create
-    defaults: { _controller: ActedLegalDocsBundle:PriceRate:create }
-    methods:  POST
 
 price_rate_edit:
     path: /rate/{id}/edit
@@ -84,4 +119,4 @@ price_rate_edit:
 price_rate_remove:
     path: /rate/{id}/remove
     defaults: { _controller: ActedLegalDocsBundle:PriceRate:remove }
-    methods:  DELETE
+    methods:  PATCH
