Updated settings page, added new styles for errors, added validation and errors handlers. 27/09/2016 11:45 AM

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -58,3 +58,8 @@ bookings:
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:bookings }
     methods:  GET
 
+prices:
+    path:     /prices
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:prices }
+    methods:  GET
+
