add editing isVisible for performance and service(by default  it field is set up as true)

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/price.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/price.yml
@@ -5,7 +5,7 @@ price_service_create:
 
 price_service_edit:
     path: /service/{id}/edit
-    defaults: { _controller: ActedLegalDocsBundle:Service:edit }
+    defaults: { _controller: ActedLegalDocsBundle:Service:editPriceService }
     methods:  PATCH
 
 price_service_remove:
