Resolve merge conflict. Resolve search_image problem with artist search. 05/10/2016 11:19 AM

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Artist.yml
@@ -17,7 +17,7 @@ Acted\LegalDocsBundle\Entity\Artist:
     workAbroad:
       groups: [profile_settings]
     searchImage:
-      groups: [block, profile_settings]
+      groups: [profile_settings, block]
   virtual_properties:
     getCityProfileId:
       serialized_name: city_id
