add logic for 'price on request'

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Option.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Option.orm.yml
@@ -15,6 +15,10 @@ Acted\LegalDocsBundle\Entity\Option:
       duration:
         type: integer(4)
         nullable: true
+      priceOnRequest:
+        type: boolean
+        options:
+          default: false
       deletedTime:
         type: datetime
         nullable: true
