--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -90,3 +90,8 @@ services:
           - "@doctrine.orm.default_entity_manager"
         tags:
           - { name: jms_serializer.event_subscriber }
+
+    app.form.type.boolean:
+        class: Acted\LegalDocsBundle\Form\Type\BooleanType
+        tags:
+            - { name: form.type, alias: boolean }
