add structure for db / mapping / serializer / entities / migration / form / add apies for editing, creating, removing TR and document TR

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Artist.orm.yml
@@ -64,5 +64,8 @@ Acted\LegalDocsBundle\Entity\Artist:
             targetEntity: Acted\LegalDocsBundle\Entity\Recommend
             mappedBy: artist
             cascade: ["remove", "persist"]
+        technicalRequirements:
+            targetEntity: Acted\LegalDocsBundle\Entity\TechnicalRequirement
+            mappedBy: artist
 
     lifecycleCallbacks: {  }
