Added "Tecnical requirement" page. Added Google places autocomplete service. P.S. > Need to finish functional.

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -63,3 +63,8 @@ prices:
     defaults: { _controller: ActedLegalDocsBundle:ChatRoom:prices }
     methods:  GET
 
+technical_requirements:
+    path:     /techreq
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:techreq }
+    methods:  GET
+
