--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.DocumentTechnicalRequirement.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.DocumentTechnicalRequirement.yml
@@ -2,10 +2,10 @@ Acted\LegalDocsBundle\Entity\DocumentTechnicalRequirement:
     exclusion_policy: NONE
     properties:
         name:
-            groups: []
+            groups: [files]
         size:
-            groups: []
+            groups: [files]
         file:
-            groups: []
+            groups: [files]
         url:
-            groups: []
+            groups: [files]
