--- a/src/Acted/LegalDocsBundle/Resources/config/services.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/services.yml
@@ -37,3 +37,7 @@ services:
             - { name: kernel.event_listener, event: 'gos_web_socket.client_error', method: onClientError }
             - { name: kernel.event_listener, event: 'gos_web_socket.server_launched', method: onServerStart }
             - { name: kernel.event_listener, event: 'gos_web_socket.client_rejected', method: onClientRejected }
+
+    file_uploader:
+        class: Acted\LegalDocsBundle\Service\FileUploader
+        arguments: [ @doctrine.orm.entity_manager, @request_stack, @kernel ]
