Added technical requirements api support and full integration with it. 28/10/2016 5:22 PM

--- a/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/chatRoom.yml
@@ -64,7 +64,7 @@ prices:
     methods:  GET
 
 technical_requirements:
-    path:     /techreq
-    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:techreq }
+    path:     /technicalreq
+    defaults: { _controller: ActedLegalDocsBundle:ChatRoom:technicalRequirement }
     methods:  GET
 
