--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -37,7 +37,9 @@ parameters:
         - image/jpeg
         - application/pdf
         - application/vnd.ms-excel
+        - application/vnd.openxmlformats-officedocument.spreadsheetml.sheet
         - application/msword
+        - application/vnd.openxmlformats-officedocument.wordprocessingml.document
         - text/plain
         - application/zip
     chat_upload_dir: uploads
