add migration for original name of file / change file uploader service / change controller of document TR / update mapping / update serializer / change parameter config

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/DocumentTechnicalRequirement.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/DocumentTechnicalRequirement.orm.yml
@@ -16,6 +16,8 @@ Acted\LegalDocsBundle\Entity\DocumentTechnicalRequirement:
             nullable: true
         file:
             type: string(255)
+        originalName:
+            type: text
     manyToOne:
         technicalRequirement:
             targetEntity: Acted\LegalDocsBundle\Entity\TechnicalRequirement
