--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
@@ -47,4 +47,7 @@ Acted\LegalDocsBundle\Entity\Performance:
         packages:
           targetEntity: Acted\LegalDocsBundle\Entity\Package
           mappedBy: performance
+        performanceRequestQuotations:
+          targetEntity: Acted\LegalDocsBundle\Entity\PerformanceRequestQuotation
+          mappedBy: performance
     lifecycleCallbacks: {  }
