Create request / update mapping for perfromance and service / prepare routing for controllers

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Performance.orm.yml
@@ -26,6 +26,10 @@ Acted\LegalDocsBundle\Entity\Performance:
           type: boolean
           options:
             default: true
+        isQuotation:
+          type: boolean
+          options:
+            default: false
         deletedTime:
           type: datetime
           nullable: true
