--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Service.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Service.orm.yml
@@ -15,6 +15,10 @@ Acted\LegalDocsBundle\Entity\Service:
           type: boolean
           options:
             default: true
+        isQuotation:
+          type: boolean
+          options:
+            default: false
         deletedTime:
           type: datetime
           nullable: true
