quotation logic - prepare quotation and send quotation/ add apies for selecting quotation_performances and quotation_services  / change old apies for creating performances and services / add migratoin for quotation

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/Event.orm.yml
@@ -58,8 +58,7 @@ Acted\LegalDocsBundle\Entity\Event:
         chatRooms:
           targetEntity: Acted\LegalDocsBundle\Entity\ChatRoom
           mappedBy: event
-    oneToOne:
-        requestQuotation:
+        requestQuotations:
           targetEntity: Acted\LegalDocsBundle\Entity\RequestQuotation
           mappedBy: event
 
