--- a/src/Acted/LegalDocsBundle/Resources/config/routing/quotation.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/routing/quotation.yml
@@ -2,3 +2,14 @@ quotation_prepare:
     path:     /prepare
     defaults: { _controller: ActedLegalDocsBundle:RequestQuotation:prepare }
     methods:  [POST]
+
+quotation_select_performance:
+    path:     /select/{requestId}/performance/{performanceId}
+    defaults: { _controller: ActedLegalDocsBundle:RequestQuotation:selectPerformance }
+    methods:  [PATCH]
+
+quotation_select_service:
+    path:     /select/{requestId}/service/{serviceId}
+    defaults: { _controller: ActedLegalDocsBundle:RequestQuotation:selectService }
+    methods:  [PATCH]
+
