add responses / fix updating published statuses

--- a/src/Acted/LegalDocsBundle/Resources/config/doctrine/RequestQuotation.orm.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/doctrine/RequestQuotation.orm.yml
@@ -13,7 +13,7 @@ Acted\LegalDocsBundle\Entity\RequestQuotation:
             type: boolean
             options:
               default: false
-        is_outdated:
+        isOutdated:
             type: boolean
             options:
               default: false
