Update server functional for get Event. Update quotation modal.

--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefEventType.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.RefEventType.yml
@@ -4,4 +4,4 @@ Acted\LegalDocsBundle\Entity\RefEventType:
         id:
             groups: [getEvent]
         eventType:
-            groups: [chat_room]
+            groups: [chat_room, getEvent]
