--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.Event.yml
@@ -31,7 +31,7 @@ Acted\LegalDocsBundle\Entity\Event:
             groups: [Default, getEvent, chat_list, chat_room]
             serialized_name: location
         user:
-            groups: [chat_list]
+            groups: [chat_list, getEvent]
     virtual_properties:
         getCountryId:
             serialized_name: countryId
