--- a/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
+++ b/src/Acted/LegalDocsBundle/Resources/config/serializer/Entity.User.yml
@@ -12,9 +12,9 @@ Acted\LegalDocsBundle\Entity\User:
     avatar:
       groups: [quote_request, chat_room, message, all_messages, profile_settings]
     firstname:
-      groups: [chat_list, chat_room, message, all_messages, users_list, profile_settings]
+      groups: [chat_list, chat_room, message, all_messages, users_list, profile_settings, getEvent]
     lastname:
-      groups: [chat_list, chat_room, message, all_messages, users_list, profile_settings]
+      groups: [chat_list, chat_room, message, all_messages, users_list, profile_settings, getEvent]
     active:
       groups: [users_list]
     fake:
